--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<body>
               
         <h1>Damien Meunier</h1>
-        <img src="myavatar.png">
+        <img src="myAvatar.png">
         <p> Dad, Husband, Teacher, Sport-Lover & Learner.</p>
 		<br>
 		<hr>
